--- a/YoYoWebApp/wwwroot/css/site.css
+++ b/YoYoWebApp/wwwroot/css/site.css
@@ -1,78 +1,82 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
-}
-
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
-}
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
+﻿html,
+body {
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    background-image: url("../bg.jpg");
+    background-position: right top;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-/*     Custom Css For App    */
+.main-card {
+    width: 30rem;
+    max-width: 30rem;
+    margin-left: 10rem;
+}
 
-.mainBtn {
-    font-size: 3.25rem !important;
-    padding: 0.5rem 1.5rem !important;
+@media (max-width: 900px) {
+    .w-md-100 {
+        width: 100% !important;
+    }
+
+    body > .card {
+        margin-left: 5rem;
+    }
+}
+
+@media (max-width: 700px) {
+    body > .card {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+.main-btn {
+    width: 120px;
+    height: 120px;
+    transition: box-shadow 0.3s linear;
+    -webkit-box-shadow: 0px 0px 10px 1px #ccc;
+    -moz-box-shadow: 0px 0px 10px 1px #ccc;
+    box-shadow: 0px 0px 5px 1px #ccc, 0px 0px 10px 1px #ccc;
+    position: relative;
+}
+
+.main-btn .disp-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.main-btn:hover {
+    -webkit-box-shadow: 0px 0px 20px 1px #ccc;
+    -moz-box-shadow: 0px 0px 20px 1px #ccc;
+    box-shadow: 0px 0px 20px 1px #ccc;
+}
+
+.main-btn .fas {
+    font-size: 1.5rem;
+}
+
+.main-btn .btn-text {
+    font-size: 14px;
+    line-height: 1.5;
+}
+
+.progress {
+    height: 8px;
+}
+
+#pauseBtn .fa{
+    display: none;
+ }
+
+#pauseBtn:hover .fa{
+    display: block;
+}
+
+#pauseBtn:hover .btn-text {
+    display: none;
 }
