header changes; loader another type

--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -37,7 +37,7 @@
               <ng-template mat-tab-label>
                 <span>Processing</span>
                 <ng-container *ngIf="procCnt>0">
-                  &nbsp;{{procCnt}}&nbsp;<app-loader [type]="'div'"></app-loader>
+                  &nbsp;{{procCnt}}&nbsp;<app-loader [type]="'btn-red'"></app-loader>
                 </ng-container>
               </ng-template>
               <div class="card-body bg-white rounded-bottom px-0 pb-0">
