--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -1,4 +1,4 @@
-<div class="text-center mt-4"><img src="assets/images/logo.png" alt="Logo"></div>
+<div class="text-center mt-4"><img src="assets/images/logo.png" alt="Logo" style="width:300px;"></div>
 <div class="card w-40 mx-auto mt-4 w-lg-50 w-md-60 w-sm-70 w-xs-90">
   <div class="card-header text-center">
     <h4 class="mb-0 font-weight-bold">Reset Password</h4>
