--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,54 +1,5 @@
-<!-- <div class="text-center mt-4"><img src="assets/images/logo.png" alt="Logo" style="width:300px;"></div>
-<div class="card mx-auto my-4 w-40 w-lg-50 w-md-60 w-sm-70 w-xs-90">
-  <div class="card-header text-center">
-    <h4 class="mb-0 font-weight-bold">Login</h4>
-  </div>
-  <div class="card-body p-3 p-sm-5">
-    <div *ngIf="loginForm">
-      <form class="w-75 w-md-90 w-sm-100 mx-auto p-2 p-sm-4" name="loginForm" (ngSubmit)="login()"
-        [formGroup]="loginForm" novalidate>
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Email</mat-label>
-          <input matInput formControlName="email" maxlength="50" required>
-          <i matSuffix class="fas fa-envelope"></i>
-          <mat-error *ngIf="loginForm.get('email')!.hasError('required')">
-            Email is required
-          </mat-error>
-          <mat-error
-            *ngIf="!loginForm.get('email')!.hasError('required') && loginForm.get('email')!.hasError('invalidEmail')">
-            Please enter a valid email address
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Password</mat-label>
-          <input matInput [type]="hide?'password':'text'" formControlName="password" maxlength="15" required>
-          <i matSuffix (click)="hide = !hide" [ngClass]="{'fa-eye': hide, 'fa-eye-slash': !hide}" class="fas"></i>
-          <mat-error *ngIf="loginForm.get('password')!.hasError('required')">
-            Password is required
-          </mat-error>
-          <mat-error
-            *ngIf="!loginForm.get('password')!.hasError('required') && loginForm.get('password')!.hasError('minlength')">
-            Password must be at least 6 characters long
-          </mat-error>
-        </mat-form-field>
-        <div class="text-right">
-          <a style="font-size:14px;" [routerLink]="'/auth/forgot-password'">
-            Forgot Password?
-          </a>
-        </div>
-        <div class="text-center">
-          <button aria-label="LOG IN" [disabled]="loginForm!.invalid || disabled" class="mt-3 btn btn-primary">
-            <app-loader [type]="'btn'" *ngIf="disabled"></app-loader>
-            LOGIN
-          </button>
-        </div>
-      </form>
-    </div>
-  </div>
-</div> -->
-
-<div class="row mx-0 bg-white">
-  <div class="col-md-6 p-0">
+<div class="login-ui row mx-0 bg-white">
+  <div class="col-md-6 p-0 d-none d-md-block">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -56,10 +7,10 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
       </ol>
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item active" data-interval="2000">
           <img class="d-block w-100" src="assets/images/carousel.png" alt="First slide">
           <div class="carousel-caption text-left">
-            <div class="pl-5 h1 num bg-primary">1</div>
+            <div class="pl-5 h1 num">1</div>
             <div class="ml-5 mt-5">
               <h5>Welcome</h5>
               <p class="font-weight-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ipsum
@@ -69,10 +20,10 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item" data-interval="2000">
           <img class="d-block w-100" src="assets/images/carousel.png" alt="Second slide">
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item" data-interval="2000">
           <img class="d-block w-100" src="assets/images/carousel.png" alt="Third slide">
         </div>
       </div>
@@ -113,7 +64,7 @@
           </a>
         </div>
         <div class="text-center mt-3">
-          <button aria-label="LOG IN" [disabled]="loginForm!.invalid || disabled" class="mt-3 btn btn-primary">
+          <button aria-label="LOG IN" [disabled]="loginForm!.invalid || disabled" class="login-btn mt-3 btn">
             <app-loader [type]="'btn'" *ngIf="disabled"></app-loader>
             LOGIN
           </button>
