--- a/src/app/auth/create-password/create-password.component.html
+++ b/src/app/auth/create-password/create-password.component.html
@@ -1,12 +1,39 @@
-<div class="text-center mt-4"><img src="assets/images/logo.png" alt="Logo" style="width:300px;"></div>
-<div class="card w-40 mx-auto mt-4 w-lg-50 w-md-60 w-sm-70 w-xs-90">
-  <div class="card-header text-center">
-    <h4 class="mb-0 font-weight-bold">Create Password</h4>
+<div class="login-ui row mx-0 bg-white">
+  <div class="col-md-6 p-0 d-none d-md-block">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-interval="2000">
+          <img class="d-block w-100" src="assets/images/carousel.png" alt="First slide">
+          <div class="carousel-caption text-left">
+            <div class="pl-5 h1 num">1</div>
+            <div class="ml-5 mt-5">
+              <h5>Welcome</h5>
+              <p class="font-weight-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ipsum
+                adipisci suscipit minus deleniti
+                quo maxime quos, facere delectus harum? Sequi voluptatem veritatis reiciendis tempore hic quasi alias
+                obcaecati odit!</p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item" data-interval="2000">
+          <img class="d-block w-100" src="assets/images/carousel.png" alt="Second slide">
+        </div>
+        <div class="carousel-item" data-interval="2000">
+          <img class="d-block w-100" src="assets/images/carousel.png" alt="Third slide">
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="card-body p-3 p-sm-5">
+  <div class="col-md-6 align-self-center">
     <div *ngIf="createPassForm">
       <form class="w-75 w-md-90 w-sm-100 mx-auto p-4" name="createPassForm" (ngSubmit)="createPassword()"
         [formGroup]="createPassForm" novalidate>
+        <div class="mb-5"><img src="assets/images/logo.png" alt="Logo" style="width:300px;"></div>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Password</mat-label>
           <input matInput [type]="hidePass?'password':'text'" formControlName="pswd" maxlength="15" required>
@@ -35,7 +62,7 @@
         </mat-form-field>
         <div class="text-center">
           <button aria-label="Reset Password" [disabled]="createPassForm!.invalid || loading"
-            class="mt-2 btn btn-primary">
+            class="mt-2 btn login-btn">
             <app-loader [type]="'btn'" *ngIf="loading"></app-loader> <!-- loader -->
             Create Password
           </button>
