--- a/src/styles.scss
+++ b/src/styles.scss
@@ -522,6 +522,59 @@ mat-checkbox {
   }
 }
 
+// login page
+.login-ui {
+  min-height: 100vh;
+
+  .carousel-inner {
+    .carousel-item {
+      img {
+        height: 100vh;
+      }
+
+      .carousel-caption {
+        left: 0;
+        bottom: 30%;
+
+        .num {
+          width: 120px;
+          position: relative;
+        }
+
+        .num:before {
+          position: absolute;
+          content: '';
+          top: 0;
+          left: 0;
+          border-bottom: 48px solid $primary;
+          border-right: 25px solid transparent;
+          height: 0;
+          width: 100%;
+          z-index: -1;
+        }
+      }
+    }
+  }
+
+  .login-btn {
+    position: relative;
+    z-index: 0;
+    color: white;
+  }
+
+  .login-btn:before {
+    position: absolute;
+    content: '';
+    top: -7px;
+    left: -82%;
+    width: 270%;
+    height: 48px;
+    transform: skew(25deg);
+    background: $primary;
+    z-index: -1;
+  }
+}
+
 // header/navbar
 header {
   .navbar {
