--- a/src/app/web-app/resource/file/file.component.html
+++ b/src/app/web-app/resource/file/file.component.html
@@ -14,8 +14,7 @@
         <div class="text-secondary text-center">
           3.3 MB of 2 GB used
           <div class="progress mt-2" style="height:10px;">
-            <div class="progress-bar" role="progressbar" style="width: 1%;" aria-valuenow="3" aria-valuemin="0"
-              aria-valuemax="2048"></div>
+            <div class="progress-bar" role="progressbar" style="width: 1%;" aria-valuenow="3" aria-valuemin="0" aria-valuemax="2048"></div>
           </div>
         </div>
       </div>
@@ -25,13 +24,10 @@
       <h3 class="mb-4 clearfix heading align-self-center">
         <!-- My Files -->
         <div class="float-right d-flex">
-          <i *ngIf="files.length>0 || folders.length>0 || allFiles.length>0" class="fa mr-3 curs-ptr align-self-center"
-            [ngClass]="{'fa-list-ul': view, 'fa-th-large': !view}" (click)="switchView()"
-            matTooltip="{{view? 'List View' : 'Grid View'}}">
+          <i *ngIf="files.length>0 || folders.length>0 || allFiles.length>0" class="fa mr-3 curs-ptr align-self-center" [ngClass]="{'fa-list-ul': view, 'fa-th-large': !view}" (click)="switchView()" matTooltip="{{view? 'List View' : 'Grid View'}}">
           </i>
           <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" id="addBtnDD" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="addBtnDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Add
             </button>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="addBtnDD">
@@ -48,20 +44,16 @@
             </div>
           </div>
         </div>
-
-
-        <!-- <nav aria-label="breadcrumb" *ngIf="folderNav.length>0">
+        <nav aria-label="breadcrumb" *ngIf="navg.length>0">
           <ol class="breadcrumb bg-transparent pl-0 mb-0">
-            <li class="breadcrumb-item" *ngFor="let flNav of folderNav;let i=index">
-              <span class="curs-ptr text-hover" (click)="navgToFldr(flNav)" *ngIf="folderNav.length-1>i">
-                {{flNav.name}}
+            <li class="breadcrumb-item" *ngFor="let n of navg;let l=last">
+              <span class="curs-ptr text-hover" (click)="navgToFldr(n)" *ngIf="!l">
+                {{n.name}}
               </span>
-              <span *ngIf="folderNav.length-1<=i">
-                {{flNav.name}}
-              </span>
+              <span *ngIf="l">{{n.name}}</span>
             </li>
           </ol>
-        </nav> -->
+        </nav>
       </h3>
       <div *ngIf="view">
         <app-loader [type]="'page'" *ngIf="loading"></app-loader>
@@ -80,14 +72,12 @@
                   <div class="name align-self-center px-0"><i class="fas fa-folder mr-1"></i>{{fl.name}}</div>
                   <div class="d-flex p-0 __options ml-auto">
                     <div class="_options">
-                      <div class="btn btn-light btn-sm mr-1"
-                        (click)="$event.stopPropagation();setSelRow(fldrModal,fl);"><i class="fas fa-edit"></i></div>
+                      <div class="btn btn-light btn-sm mr-1" (click)="$event.stopPropagation();setSelRow(fldrModal,fl);"><i class="fas fa-edit"></i></div>
                       <div class="btn btn-light btn-sm mr-1" (click)="$event.stopPropagation();delCntntOrFldr(fl,true)">
                         <i class="fas fa-trash-alt"></i>
                       </div>
                     </div>
-                    <mat-checkbox class="align-self-center" (change)="selMe($event.checked, fl)"
-                      (click)="$event.stopPropagation();"></mat-checkbox>
+                    <mat-checkbox class="align-self-center" (change)="selMe($event.checked, fl)" (click)="$event.stopPropagation();"></mat-checkbox>
                   </div>
                 </div>
               </div>
@@ -104,8 +94,7 @@
                   </div>
                   <div class="options rounded">
                     <div class="dropleft">
-                      <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
+                      <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-share-square"></i>
                       </button>
                       <div class="dropdown-menu" aria-labelledby="shareDD">
@@ -183,8 +172,7 @@
                 <td class="align-middle options">
                   <div class="d-flex">
                     <div class="dropleft" *ngIf="!aF.isFldr">
-                      <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
+                      <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-share-square"></i>
                       </button>
                       <div class="dropdown-menu" aria-labelledby="shareDD">
@@ -220,8 +208,7 @@
 </div>
 
 <!-- fixed sel item bootm div -->
-<app-sel-itm-fxd-div [selArr]="selData" (delContent)="delContent(undefined)" [content]="true" *ngIf="selData.length > 0"
-  (clrSelData)="clrSel()">
+<app-sel-itm-fxd-div [selArr]="selData" (delContent)="delContent(undefined)" [content]="true" *ngIf="selData.length > 0" (clrSelData)="clrSel()">
 </app-sel-itm-fxd-div>
 
 <!-- add folder -->
@@ -331,8 +318,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')"
-      [disabled]="!sharingValue.checked">Share</button>
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')" [disabled]="!sharingValue.checked">Share</button>
   </div>
 </ng-template>
 
@@ -351,8 +337,7 @@
         <div class="name align-self-center">Abc.png</div>
         <div class="align-self-center">
           <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
-              aria-valuemin="0" aria-valuemax="100" style="width: 75%">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
               75%
             </div>
           </div>
