--- a/src/app/web-app/resource/file/file.component.html
+++ b/src/app/web-app/resource/file/file.component.html
@@ -323,22 +323,23 @@
 </ng-template>
 
 <!-- upload process -->
-<div class="process">
+<div class="process" *ngIf="procFiles.length>0 && !isClose">
   <div class="card">
     <div class="card-header py-2">
-      Uploaded 1 file
+      Uploaded {{procFiles.length}} file
       <div class="float-right">
-        <div class="btn btn-sm btn-light"><i class="fas fa-angle-down"></i></div>
-        <div class="btn btn-sm btn-light"><i class="fas fa-times"></i></div>
+        <div class="btn btn-sm btn-light" (click)="this.showProcDetail = !this.showProcDetail;">
+          <i class="fa" [ngClass]="{'fa-angle-up': !showProcDetail,'fa-angle-down': showProcDetail}"></i>
+        </div>
+        <div class="btn btn-sm btn-light" (click)="isClose=true"><i class="fas fa-times"></i></div>
       </div>
     </div>
-    <div class="card-body py-2">
-      <div class="d-flex justify-content-between">
-        <div class="name align-self-center">Abc.png</div>
+    <div class="card-body py-2 scrolView" *ngIf="showProcDetail">
+      <div class="d-flex justify-content-between" *ngFor="let pF of procFiles">
+        <div class="name align-self-center">{{pF.name}}</div>
         <div class="align-self-center">
-          <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
-              75%
+          <div class="progress"><!-- style - wdth bar perc -->
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
             </div>
           </div>
         </div>
