--- a/src/app/hub/content-workspace/content-workspace.component.scss
+++ b/src/app/hub/content-workspace/content-workspace.component.scss
@@ -97,6 +97,9 @@
   min-width: 150px;
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+.cdk-drag:not(.cdk-drag-dragging) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
 
 .cur-mov {
   cursor: move;
