--- a/src/app/web-app/resource/file/file.component.html
+++ b/src/app/web-app/resource/file/file.component.html
@@ -39,7 +39,7 @@
                 URL</a>
               <a class="dropdown-item curs-ptr" (click)="uploadBtn(uploadFile)"><i class="fa fa-upload mr-1"></i>
                 Upload from hard drive
-                <input type="file" style="display: none;" #uploadFile (change)="uplCntnt($event)">
+                <input type="file" style="display: none;" #uploadFile (change)="uplCntnt($event)" multiple>
               </a>
             </div>
           </div>
